services/users/k8s-upstream-virtualservice.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - "*"
    routes:
      - matchers:
        - prefix: /users/
        options:
            prefixRewrite: /
        routeAction:
          single:
            upstream:
              name: safemoon-users-8081
              namespace: gloo-system
